deployments/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rossum-agent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns

spec:
  ingressClassName: nginx
  rules:
    - host: rossum-agent.${TOOLS_BASE_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: rossum-agent
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rossum-agent.${TOOLS_BASE_DOMAIN}
      secretName: rossum-agent-${TOOLS_BASE_DOMAIN//./-}-tls
